fix: update placeholder color in event styles for better visibility

--- a/apps/web/src/app/event/event.scss
+++ b/apps/web/src/app/event/event.scss
@@ -389,7 +389,7 @@ body {
         font-size: 1rem;
         outline: none;
         &::placeholder {
-          color: #f9f9f9;
+          color: #ccc;
         }
       }
 			.valid{
